--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ container{
 .first-word{
     color: darkturquoise;
     margin-right: 7px;
+    margin-top: 20%;
     width: 52px;
     height: 19px;
     gap: 0px;
@@ -326,6 +327,8 @@ hr{
     width: 335px;
     display: flex;
     justify-content: center;
+    margin-top: 12%;
+    margin-bottom: 10%;
 }
 .path-2{
     padding-right: 10%;
